Bug 977963 - Disable x11 texture_from_pixmap until the black layer problem is fixed. r=mattwoodrow